--- a/Quessiso-main/requirements.txt
+++ b/Quessiso-main/requirements.txt
@@ -4,4 +4,10 @@ django-widget-tweaks==1.4.8
 pytz==2020.1
 sqlparse==0.3.1
 Pillow
+Django==4.x.x
+PyPDF2==3.x.x
+python-docx==1.x.x
+django-widget-tweaks==1.x.x
+
+
 
